--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,12 @@ logging.level.org.org.hibernate=info
 spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
+
+# Email
+spring.mail.host=smtp.naver.com
+spring.mail.port=465
+spring.mail.username=recifood@naver.com
+spring.mail.password=Recifood!
+spring.mail.properties.mail.stmp.auth=true
+spring.mail.properties.mail.stmp.ssl.enable=true
+spring.mail.protocol=smtps
