--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.thymeleaf.cache=false
 spring.mail.host=smtp.naver.com
 spring.mail.port=465
 spring.mail.username=recifood@naver.com
-spring.mail.password=Recifood!
+spring.mail.password=Recifood!234
 spring.mail.properties.mail.stmp.auth=true
 spring.mail.properties.mail.stmp.ssl.enable=true
 spring.mail.protocol=smtps
